[package]
name = "xcr"
version = "0.1.0"
edition = "2021"
authors = ["Serkan Altuntas <serkan@serkan.ai>"]
description = "A tool for renaming Xcode projects"
license = "MIT"
repository = "https://github.com/serkanaltuntas/xcr"
keywords = ["xcode", "ios", "macos", "development", "tools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
log4rs = "1.2"
glob = "0.3"
chrono = "0.4"

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = 'abort'